// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SunCardGraph render should the graph with the data values when provided 1`] = `
<!---->
      <div class="sun-card-graph">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 150">
          
          <!-- Define gradients for use when drawing afterwards -->
          <defs>
            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="sun-gradient">
              <stop offset="0%" class="sunInitialStop"></stop>
              <stop class="sunMiddleStop" offset="0%"></stop>
              <stop class="sunEndStop" offset="0%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="dawn-gradient">
              <stop offset="0%" class="dawnInitialStop"></stop>
              <stop class="dawnMiddleStop" offset="100%"></stop>
              <stop class="dawnEndStop" offset="100%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="day-gradient">
              <stop offset="0%" class="dayInitialStop"></stop>
              <stop class="dayMiddleStop" offset="100%"></stop>
              <stop class="dayEndStop" offset="100%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="dusk-gradient">
              <stop offset="0%" class="duskInitialStop"></stop>
              <stop class="duskMiddleStop" offset="23%"></stop>
              <stop class="duskEndStop" offset="23%"></stop>
            </linearGradient>
          </defs>

          <!-- Draw path of the sun across the 'sky' -->
          <path class="sun-card-sun-line" d="M5,146 C29,153 73,128 101,108 C276,-29 342,23 449,108 C473,123 509,150 545,146" fill="none" stroke="var(--sun-card-lines)"></path>

          <!-- Draw between the path of the sun and the horizon line for dawn -->
          <!-- IE: First dark blue part -->
          <path d="M5,146 C29,153 73,128 101,108 L 5 108" fill="url(#dawn-gradient)" stroke="url(#dawn-gradient)" opacity="100"></path>

          <!-- Draw between the path of the sun and the horizon line for day -->
          <!-- IE: Main light blue part in the middle -->
          <path d="M101,108 C276,-29 342,23 449,108 L 104,108" fill="url(#day-gradient)" stroke="url(#day-gradient)" opacity="100"></path>

          <!-- Draw between the path of the sun and the horizon line for dusk -->
          <!-- IE: Last dark blue part -->
          <path d="M449,108 C473,123 509,150 545,146 L 545 108" fill="url(#dusk-gradient)" stroke="url(#dusk-gradient)" opacity="23"></path>

          <!-- Draw the horizon, dawn and dusk lines (the gray horizontal/vertical lines) -->
          <line x1="5" y1="108" x2="545" y2="108" stroke="var(--sun-card-lines)"></line>
          <line x1="101" y1="25" x2="101" y2="100" stroke="var(--sun-card-lines)"></line>
          <line x1="449" y1="25" x2="449" y2="100" stroke="var(--sun-card-lines)"></line>

          <!-- Draw a circle representing the sun -->
          <circle r="17" stroke="none" cx="50" cy="50" opacity="0" fill="url(#sun-gradient)"></circle>
        </svg>
      </div>
    
`;

exports[`SunCardGraph render should the graph with the default values when data values are not provided 1`] = `
<!---->
      <div class="sun-card-graph">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 550 150">
          
          <!-- Define gradients for use when drawing afterwards -->
          <defs>
            <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="sun-gradient">
              <stop offset="0%" class="sunInitialStop"></stop>
              <stop class="sunMiddleStop" offset="0%"></stop>
              <stop class="sunEndStop" offset="0%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="dawn-gradient">
              <stop offset="0%" class="dawnInitialStop"></stop>
              <stop class="dawnMiddleStop" offset="0%"></stop>
              <stop class="dawnEndStop" offset="0%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="day-gradient">
              <stop offset="0%" class="dayInitialStop"></stop>
              <stop class="dayMiddleStop" offset="0%"></stop>
              <stop class="dayEndStop" offset="0%"></stop>
            </linearGradient>
            
            <linearGradient x1="0%" y1="0%" x2="100%" y2="0%" id="dusk-gradient">
              <stop offset="0%" class="duskInitialStop"></stop>
              <stop class="duskMiddleStop" offset="0%"></stop>
              <stop class="duskEndStop" offset="0%"></stop>
            </linearGradient>
          </defs>

          <!-- Draw path of the sun across the 'sky' -->
          <path class="sun-card-sun-line" d="M5,146 C29,153 73,128 101,108 C276,-29 342,23 449,108 C473,123 509,150 545,146" fill="none" stroke="var(--sun-card-lines)"></path>

          <!-- Draw between the path of the sun and the horizon line for dawn -->
          <!-- IE: First dark blue part -->
          <path d="M5,146 C29,153 73,128 101,108 L 5 108" fill="url(#dawn-gradient)" stroke="url(#dawn-gradient)" opacity="0"></path>

          <!-- Draw between the path of the sun and the horizon line for day -->
          <!-- IE: Main light blue part in the middle -->
          <path d="M101,108 C276,-29 342,23 449,108 L 104,108" fill="url(#day-gradient)" stroke="url(#day-gradient)" opacity="0"></path>

          <!-- Draw between the path of the sun and the horizon line for dusk -->
          <!-- IE: Last dark blue part -->
          <path d="M449,108 C473,123 509,150 545,146 L 545 108" fill="url(#dusk-gradient)" stroke="url(#dusk-gradient)" opacity="0"></path>

          <!-- Draw the horizon, dawn and dusk lines (the gray horizontal/vertical lines) -->
          <line x1="5" y1="108" x2="545" y2="108" stroke="var(--sun-card-lines)"></line>
          <line x1="101" y1="25" x2="101" y2="100" stroke="var(--sun-card-lines)"></line>
          <line x1="449" y1="25" x2="449" y2="100" stroke="var(--sun-card-lines)"></line>

          <!-- Draw a circle representing the sun -->
          <circle r="17" stroke="none" cx="0" cy="0" opacity="0" fill="url(#sun-gradient)"></circle>
        </svg>
      </div>
    
`;
